--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.2",
     "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.561.0",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
