--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
+    "formik": "^2.4.9",
     "lucide-react": "^0.561.0",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.4.0"
+    "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.4.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
